--- a/vai.html
+++ b/vai.html
@@ -1,10 +1,12 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ala Guarany - Link do Zoom</title>
+<link rel="stylesheet" href="./css.css">
 </head>
 <body style="text-align: center; display: flex; align-items: center; flex-direction: column; justify-content: center; height: 96vh; background: url('https://th.bing.com/th/id/Rdb3f737c0802c96c0140af6c8dd1c690?rik=Ir2rrmiKaydegA&riu=http%3a%2f%2fwww.understandingmormonism.org%2ffiles%2f2008%2f06%2fmoroni-mormon.jpg&ehk=NmFRVAKbdCkuFcs%2bdnieL7LpVbBRCY52D14MRrRzTLw%3d&risl=&pid=ImgRaw')">
 <h2 style="color: #FFF">Reunião Sacramental - Ala Guarany</h2>
-<div style="box-shadow: 0 3px 16px rgba(0,0,0,0.5); padding: 30px 45px; background-color: #FFF; border-radius: 10px">
+<div style="box-shadow: 0 3px 16px rgba(0,0,0,0.5); padding: 30px 35px; background-color: #FFF; border-radius: 10px">
 <h1>Quantas pessoas estão assistindo a reunião?</h1>
 <p><input type="number" style="padding: 5px 10px" placeholder="Ex: 3"/></p>
 <a href="https://zoom.us/j/92119915786?pwd=Nk9sR2E3WFB3eklMMkNaejQ1c0didz09">
