--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 data: new Date(),
                 quantidade: form.quantidade.value,
                 ala: "Guarany",
+                nome: form.nome.value
             })
             $("#form").html(`<h1>Pronto!</h1><h3>Caso precise entrar novamente, apenas clique no link abaixo</h3><button
             style="background-color: #6666FF; border: none; color: #FFF; padding: 15px 45px; border-radius: 45px; cursor: pointer; font-size: 18px; margin-top: 5px">Ir
@@ -25,9 +26,11 @@
 </head>
 <body style="text-align: center; display: flex; align-items: center; flex-direction: column; justify-content: center; height: 96vh; background: url('https://th.bing.com/th/id/Rdb3f737c0802c96c0140af6c8dd1c690?rik=Ir2rrmiKaydegA&riu=http%3a%2f%2fwww.understandingmormonism.org%2ffiles%2f2008%2f06%2fmoroni-mormon.jpg&ehk=NmFRVAKbdCkuFcs%2bdnieL7LpVbBRCY52D14MRrRzTLw%3d&risl=&pid=ImgRaw')">
 <h2 style="color: #FFF">Reunião Sacramental - Ala Guarany</h2>
-<div style="box-shadow: 0 3px 16px rgba(0,0,0,0.5); padding: 30px 35px; background-color: #FFF; border-radius: 10px">
-    <form id="form">
-        <h1>Quantas pessoas estão assistindo a reunião?</h1>
+<div style="box-shadow: 0 3px 16px rgba(0,0,0,0.5); padding: 20px 3px; background-color: #FFF; border-radius: 10px">
+    <form id="form" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+        <h1 style="max-width: 80%;">Informe o seu nome ou sobrenome da família, Ex: João Castro, ou Família Silva</h1>
+        <p><input name="nome" style="padding: 5px 10px;" placeholder="Ex: João Castro, ou Família Silva" required /></p>
+        <h1 style="max-width: 80%">Quantas pessoas vão assistir a reunião neste dispositivo?</h1>
         <p><input type="number" name="quantidade" style="padding: 5px 10px" placeholder="Ex: 3" required/></p>
         <button
             style="background-color: #6666FF; border: none; color: #FFF; padding: 15px 45px; border-radius: 45px; cursor: pointer; font-size: 18px; margin-top: 5px">Ir
